--- a/style.css
+++ b/style.css
@@ -1,4 +1,60 @@
-.card-img-top {
+.pokemon-card {
+    display: inline-block;
+    width: 300px;
+    padding: 1em;
+    border-radius: 15px;
+    background: #ddd;
+    text-align: left;
+}
+
+.card-image-container {
+    background-color: #00000070;
+    text-align: center;
+    padding: 1em 1em 0;
+    border-radius: 3px 3px 0 0;
+    
+}
+
+.card-image-container img {
+    min-height: 200px;
+    margin: auto;
+    display: inline-block;
 
 }
 
+.pokemonName {
+    font-family: 'Open Sans Condensed', 'Open Sans', helvetica, sans-serif;
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: 700;
+    letter-spacing: 0.02em;
+    padding: .25em 0 1em 0;
+}
+
+.card-yellow {
+    background: linear-gradient(90deg, rgba(255,222,0,1) 34%, rgba(232,255,153,1) 83%);
+}
+
+.card-caption {
+    background-color: #ffffff65;
+
+
+    padding: 1em;
+    position: relative;
+    border-radius: 3px 3px 0 0;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.abilities-title {
+    font-family: 'Open Sans', helvetica, sans-serif;
+    font-style: italic;
+    font-weight: bold;
+    padding-left: 1em;
+}
+
+.card-red {
+    background: linear-gradient(0deg, rgba(199,24,0,1) 10%, rgba(252,194,69,1) 100%);
+}
